--- a/assets/style.css
+++ b/assets/style.css
@@ -37,6 +37,7 @@ img {
 @media (max-width: 480px) {
   .button {
     margin-bottom: 5px; /* Più spazio per schermi molto piccoli */
+    margin-right: 5px;
   }
 }
 
